Atualização de códigos e tokens

--- a/src/BiolabIntegraVida.Web/appsettings.json
+++ b/src/BiolabIntegraVida.Web/appsettings.json
@@ -16,11 +16,11 @@
     "AdB2c": {
       "TokenUrl": "https://interplayersdevb2c.b2clogin.com/interplayersdevb2c.onmicrosoft.com/B2C_1_Loyalty/oauth2/v2.0/token",
       "Scope": "https://interplayersdevb2c.onmicrosoft.com/services/loyalty-api/.default",
-      "ClientId": "060539be-e19e-4143-b229-56c86b1f89fe",
-      "ClientSecret": "HSb8Q~YZay.uACXtHwyXUqafHOFSzsOe~_bQMcMX"
+      "ClientId": "1af339e8-289a-45d4-88c7-baaa1c9a85c2",
+      "ClientSecret": "say8Q~FclwAAhdHtzbu8NMKItfymPhb06j_zrcMk"
     },
     "Loyalty": {
-      "AdministratorId": "041",
+      "AdministratorId": "021",
       "UrlConsultarUf": "https://idp-api-gtw.azure-api.net/external-loyalty-logistic-pre/v1/addressData/administrators/{administratorId}/ufs",
       "UrlConsultarMedicamentos": "https://idp-api-gtw.azure-api.net/external-loyalty-products-pre/v1/Product/administrators/{administratorId}/products",
       "UrlConsultarEstabelecimentos": "https://idp-api-gtw.azure-api.net/external-loyalty-store-pre/v2/Establishment/administrators/{administratorId}/types/MH/establishments?zip={zip}",
