Implementação de Google Analytics e cookies

--- a/src/BiolabIntegraVida.Web/appsettings.json
+++ b/src/BiolabIntegraVida.Web/appsettings.json
@@ -9,6 +9,9 @@
   "GoogleMaps": {
     "ApiKey": "AIzaSyAtQGLOR9m1P2PDpqgyUlcliALsEe_dsV0"
   },
+  "GoogleAnalytics": {
+    "Id": "G-5R6CF4W45Q"
+  },
   "ApplicationConfig": {
     "CompressContent": false
   },
@@ -32,18 +35,54 @@
       "UrlAderirProduto": "https://idp-api-gtw.azure-api.net/external-loyalty-adhesion-pre/v1/Adhesion/administrators/{administratorId}/consumers/{userId}/products"
     },
     "CustomProductNames": [
-      { "name": "CONTRAVE", "ean": "7891721201691" },
-      { "name": "EUTHYROX 25MCG", "ean": "7891721014642" },
-      { "name": "EUTHYROX 50MCG", "ean": "7891721014697" },
-      { "name": "EUTHYROX 75MCG", "ean": "7891721014741" },
-      { "name": "EUTHYROX 88MCG", "ean": "7891721014963" },
-      { "name": "EUTHYROX 100MCG", "ean": "7891721014239" },
-      { "name": "EUTHYROX 112MCG", "ean": "7891721014987" },
-      { "name": "EUTHYROX 125MCG", "ean": "7891721014086" },
-      { "name": "EUTHYROX 137MCG", "ean": "7891721015007" },
-      { "name": "EUTHYROX 150MCG", "ean": "7891721014130" },
-      { "name": "EUTHYROX 175MCG", "ean": "7891721014185" },
-      { "name": "EUTHYROX 200MCG", "ean": "7891721014796" }
+      {
+        "name": "CONTRAVE",
+        "ean": "7891721201691"
+      },
+      {
+        "name": "EUTHYROX 25MCG",
+        "ean": "7891721014642"
+      },
+      {
+        "name": "EUTHYROX 50MCG",
+        "ean": "7891721014697"
+      },
+      {
+        "name": "EUTHYROX 75MCG",
+        "ean": "7891721014741"
+      },
+      {
+        "name": "EUTHYROX 88MCG",
+        "ean": "7891721014963"
+      },
+      {
+        "name": "EUTHYROX 100MCG",
+        "ean": "7891721014239"
+      },
+      {
+        "name": "EUTHYROX 112MCG",
+        "ean": "7891721014987"
+      },
+      {
+        "name": "EUTHYROX 125MCG",
+        "ean": "7891721014086"
+      },
+      {
+        "name": "EUTHYROX 137MCG",
+        "ean": "7891721015007"
+      },
+      {
+        "name": "EUTHYROX 150MCG",
+        "ean": "7891721014130"
+      },
+      {
+        "name": "EUTHYROX 175MCG",
+        "ean": "7891721014185"
+      },
+      {
+        "name": "EUTHYROX 200MCG",
+        "ean": "7891721014796"
+      }
     ]
   }
 }
