Implementação da máscara dos produtos Biolab

--- a/src/BiolabIntegraVida.Web/appsettings.json
+++ b/src/BiolabIntegraVida.Web/appsettings.json
@@ -36,52 +36,20 @@
     },
     "CustomProductNames": [
       {
-        "name": "CONTRAVE",
-        "ean": "7891721201691"
+        "name": "ATACAND 16MG",
+        "ean": "7896206401146"
       },
       {
-        "name": "EUTHYROX 25MCG",
-        "ean": "7891721014642"
+        "name": "ATACAND 8MG",
+        "ean": "7896206401160"
       },
       {
-        "name": "EUTHYROX 50MCG",
-        "ean": "7891721014697"
+        "name": "ATACAND HTC 16MG",
+        "ean": "7896206402082"
       },
       {
-        "name": "EUTHYROX 75MCG",
-        "ean": "7891721014741"
-      },
-      {
-        "name": "EUTHYROX 88MCG",
-        "ean": "7891721014963"
-      },
-      {
-        "name": "EUTHYROX 100MCG",
-        "ean": "7891721014239"
-      },
-      {
-        "name": "EUTHYROX 112MCG",
-        "ean": "7891721014987"
-      },
-      {
-        "name": "EUTHYROX 125MCG",
-        "ean": "7891721014086"
-      },
-      {
-        "name": "EUTHYROX 137MCG",
-        "ean": "7891721015007"
-      },
-      {
-        "name": "EUTHYROX 150MCG",
-        "ean": "7891721014130"
-      },
-      {
-        "name": "EUTHYROX 175MCG",
-        "ean": "7891721014185"
-      },
-      {
-        "name": "EUTHYROX 200MCG",
-        "ean": "7891721014796"
+        "name": "ATACAND HTC 8MG",
+        "ean": "7896206402426"
       }
     ]
   }
