Implementação do Sentry log

--- a/src/BiopasIntegraVida.Web/appsettings.json
+++ b/src/BiopasIntegraVida.Web/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "Sentry": {
+    "Dsn": "https://73ef53df9522ed92ad0722c3035e4276@o4509012164214784.ingest.us.sentry.io/4509012167557120"
+  },
   "GoogleMaps": {
     "ApiKey": "AIzaSyAtQGLOR9m1P2PDpqgyUlcliALsEe_dsV0"
   },
