--- a/src/BiopasIntegraVida.Web/BiopasIntegraVida.Web.csproj
+++ b/src/BiopasIntegraVida.Web/BiopasIntegraVida.Web.csproj
@@ -7,7 +7,9 @@
 
   <ItemGroup>
     <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.433" />
+    <PackageReference Include="Sentry.Serilog" Version="5.4.0" />
     <PackageReference Include="Serilog" Version="4.2.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
